# warpish

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  diesel.toml  terminal.toml  warpish_history.db
.cargo/: config.toml
.github/workflows/: tmux-build.yaml
keymaps/: FORMAT.md  emacs.yaml
keymaps/.trunk/: .gitignore
src/: actions.rs  assets.rs  codebase.rs  completions.rs  completions_ui.rs  db.rs  drive.rs  error.rs  event.rs  grid.rs  keybindings.rs  lib.rs  main.rs  models.rs  rules.rs  sum_tree.rs  syntax_parser.rs  vim.rs  workflow_manager.rs
src/agent/: client.rs  context.rs  mod.rs  model.rs  reasoning.rs
src/agent_mode_eval/: mod.rs
src/ai/: client.rs
src/app/: config.rs  drive.rs  mod.rs  mode.rs  pane.rs  pane_manager.rs  state.rs
src/asset_macro/: mod.rs
src/code/: mod.rs
src/command/: mod.rs  tests.rs
src/config/: mod.rs  theme.rs
src/data/: db.rs
src/features/: fuzzy.rs
src/fuzzy_match/: mod.rs
src/graphql/: mod.rs
src/integration/: mod.rs
src/languages/: mod.rs
src/lpc/: detector.rs  mod.rs  runtime.rs  translator.rs  validator.rs
src/markdown_parser/: ast.rs  lexer.rs  mod.rs  parser.rs  renderer.rs  themes.rs
src/mcq/: mod.rs
src/natural_language_detection/: mod.rs
src/pty/: mod.rs  vte_handler.rs
src/render/: engine.rs
src/renderer/: mod.rs
src/resources/: mod.rs
src/rules/: mod.rs
src/scripting/: mod.rs
src/serve_wasm/: mod.rs
src/session/: mod.rs  sqlite.rs
src/string_offset/: mod.rs
src/syntax_tree/: analyzer.rs  builder.rs  mod.rs  node.rs  transformer.rs  visitor.rs
src/tui/: mod.rs
src/ui/: blocks.rs  command_palette.rs  layout.rs  mod.rs  renderer.rs  terminal_ui.rs  theme.rs
src/utils/: sum_tree.rs
src/virtual_fs/: mod.rs
src/warpish_drive/: prompts.rs
src/watcher/: mod.rs
src/websocket/: mod.rs
themes/: acme.yaml  ashes_dark.yaml  ashes_light.yaml  aura.yaml  autumn.yaml  ayu_mirage.yaml  baitong.yaml  carbonfox.yaml  chicago95.yaml  dark_plus.yaml  dark_pride.yaml  dawnfox.yaml  dayfox.yaml  dracula_plus.yaml  duskfox.yaml  enfocado_dark.yaml  enfocado_light.yaml  github_dark.yaml  github_dark_default.yaml  github_dark_dimmed.yaml  github_light.yaml  github_light_default.yaml  gnome_terminal.yaml  google.yaml  gruber_darker.yaml  gruvbox_material_hard_dark.yaml  gruvbox_material_hard_light.yaml  hatsunemiku.yaml  kanagawa_dragon.yaml  kanagawa_wave.yaml  kimbie_dark.yaml  kimbie_light.yaml  konsole_linux.yaml  meliora.yaml  miasma.yaml  monokai.yaml  moonfly.yaml  night_owl.yaml  nightfly.yaml  nightfox.yaml  (+20 more)
workflows/: .gitignore  Cargo.toml  FORMAT.md  uninstall_homebrew.yaml
workflows/build_ts/: index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
workflows/script/: bootstrap  presubmit
workflows/workflow-types/: Cargo.toml
workflows/workflow-types/src/: lib.rs
workflows/workflows/: Cargo.toml  build.rs
workflows/workflows/src/: lib.rs
