[package]
name = "warpish_terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
portable-pty = "0.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.9", features = ["lua54"] }
wgpu = "0.20"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
futures = "0.3"
thiserror = "1.0"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
vte = { git = "https://github.com/warpdotdev/vte", rev = "3b3da71c34cc1256c7e20981cf03f8eb95e08ffc", features = ["ansi"] }
winit = {git = "https://github.com/warpdotdev/winit", rev = "dce1fa315d0378399bda981292f5e8d2701ffd46"}
pollster = "0.3"
cosmic-text = {git = "https://github.com/warpdotdev/cosmic-text", rev = "435e584ee4e2cb09315a0b2a4f4ef5e32a59e7ba"}
diesel = { version = "2.1", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
uneval = {git = "https://github.com/warpdotdev/uneval", rev = "df4d9fad372aedc447e6f93ca0f930fabaf9dd1a"}
shellwords = "1.1"
global-hotkey = "0.5"
rust-embed = { version = "8.3", features = ["debug-embed"] }
arboard = {git = "https://github.com/warpdotdev/arboard", rev ="c922114ac898d26dce0914176f3b8c2bf60c8137"}
yaml-rust = "0.4"
pprof = { version = "0.13", features = ["flamegraph"] }
lazy_static = "1.4"
serde_yaml = "0.9"
uuid = { version = "1.8", features = ["v4", "serde"] }
dirs = "5.0"
hex = "0.4"
rfd = "0.14"
ignore = "0.4"
similar = "2.5"
which = "6.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.26"
rusqlite = { version = "0.30", features = ["bundled"] }
regex = "1.10"
warp = "0.3"
notify = "6.0"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
addr2line = { git = "https://github.com/gimli-rs/addr2line" }
adler = { git = "https://github.com/jonas-schievink/adler.git" }
adler32 = "1.2.0"
aho-corasick = "1.1.0"
analytics = "0.1.0"
ansi_term = "0.12.1"
anyhow = "1.0"
arrayref = "0.3.7"
arrayvec = "0.7.4"
as-slice = "0.1.0"
ascii = "1.1.0"
async-channel = "1.9.0"
async-executor = "1.5.0"
async-fs = "1.6.0"
async-io = "1.13.0"
async-lock = "2.4.0"
async-net = "1.2.0"
async-process = "1.2.0"
async-task = "4.0.0"
atomic-waker = "1.1.0"
atty = "0.2.14"
autocfg = "1.1.0"
backtrace = "0.3.69"
base64 = "0.21.0"
bindgen = "0.72.0"
bitflags = "2.4.1"
block = "0.1.6"
blocking = "1.3.0"
bounded-vec-deque = "0.1.1"
bumpalo = "3.14.0"
bytemuck = "1.14.0"
byteorder = "1.5.0"
bytes = "1.5.0"
cache-padded = "1.2.0"
cc = "1.0.83"
cexpr = "0.6.0"
cfg-if = "1.0.0"
clang-sys = "1.6.1"
clap = "4.4.11"
cloudabi = "0.0.3"
cmake = "0.1.49"
cocoa = "0.24.0"
cocoa-foundation = "0.1.0"
color_quant = { git = "https://github.com/image-rs/color_quant.git" }
async-tls = { git = "https://github.com/warpdotdev/async-tls.git", rev="20995b78ebb9cbb63febc24c1ed9439a2841cfa6"}
combine = "3.0.2"
concurrent-queue = "2.2.0"
const_format = "0.2.30"
const_format_proc_macros = "0.2.30"
convert_case = "0.6.0"
core-foundation = "0.9.0"
core-foundation-sys = "0.8.3"
core-graphics = "0.22.0"
core-graphics-types = "0.1.0"
crc32fast = "1.3.2"
crossbeam-channel = "0.5.8"
crossbeam-deque = "0.8.3"
crossbeam-epoch = "0.9.14"
crossbeam-utils = "0.8.16"
ctor = "0.2.6"
darling = "0.14.4"
darling_core = "0.14.4"
darling_macro = "0.14.4"
dashmap = "5.5.3"
data-url = "0.3.0"
debugid = "0.8.0"
deflate = "1.0.0"
derive-new = "0.5.9"
diesel_derives = "2.1.0"
diesel_migrations = "2.1.0"
dirs-sys = "0.4.1"
dirs-sys-next = "0.1.1"
doc-comment = "0.3.3"
dunce = "1.0.4"
dwrote = { version = "0.11.0", optional = true }
either = "1.9.0"
enclose = { git = "https://github.com/clucompany/Enclose.git" }
encoding_rs = "0.8.33"
event-listener = "2.5.3"
expat-sys = "2.1.6"
failure = "0.1.8"
failure_derive = "0.1.8"
fastrand = "2.0.0"
filetime = "0.2.2"
flate2 = "1.0.28"
float-cmp = "0.9.0"
float-ord = "0.3.2"
fnv = "1.0.7"
form_urlencoded = "1.2.0"
fs_extra = "1.3.0"
fsevent = "0.4.0"
fsio = { git = "https://github.com/sagiegurari/fsio.git" }
fuchsia-zircon = "0.3.3"
fuchsia-zircon-sys = "0.3.3"
futures-channel = "0.3.29"
futures-core = "0.3.29"
futures-executor = "0.3.29"
futures-io = "0.3.29"
futures-lite = "2.0.1"
futures-macro = "0.3.29"
futures-sink = "0.3.29"
futures-task = "0.3.29"
futures-util = "0.3.29"
generic-array = { git = "https://github.com/fizyk20/generic-array.git" }
getrandom = "0.2.10"
getset = "0.1.2"
gif = "0.12.0"
gimli = "0.28.0"
git2 = "0.18.1"
glob = "0.3.1"
graphql-parser = "0.4.0"
graphql_client = "0.12.0"
graphql_client_codegen = "0.12.0"
graphql_query_derive = "0.12.0"
h2 = "0.3.21"
hash32 = "0.1.0"
hashbrown = "0.14.2"
heapless = "0.8.0"
heck = "0.4.1"
hermit-abi = "0.3.1"
hostname = "0.3.1"
http = "1.0.0"
http-body = "1.0.0"
httparse = "1.8.0"
httpdate = "1.0.3"
humantime = "2.1.0"
hyper = "1.0.0"
hyper-tls = "0.6.0"
ident_case = "1.0.1"
idna = "0.3.0"
image = "0.24.7"
indexmap = "2.1.0"
inotify = "0.9.0"
inotify-sys = "0.1.5"
instant = "0.1.12"
iovec = "0.1.0"
ipnet = "2.9.0"
itertools = "0.12.0"
itoa = "1.0.9"
jobserver = "0.1.26"
jpeg-decoder = "0.3.0"
js-sys = "0.3.64"
kernel32-sys = "0.2.2"
kurbo = "0.10.0"
lazycell = "1.3.0"
libc = "0.2.149"
libloading = "0.8.1"
libz-sys = "1.1.12"
linked-hash-map = "0.5.6"
lock_api = "0.4.11"
malloc_buf = "0.0.6"
match_cfg = "0.1.0"
matches = "0.1.10"
memchr = "2.6.4"
memmap = "0.7.0"
memmap2 = "0.9.0"
memoffset = "0.9.0"
metal = "0.26.0"
migrations_internals = "2.1.0"
migrations_macros = "2.1.0"
mime = "0.3.17"
miniz_oxide = "0.7.1"
mio = "0.8.10"
mio-extras = "2.0.6"
miow = "0.3.1"
native-tls = "0.2.11"
net2 = "0.2.33"
nix = "0.27.1"
nom = "7.1.3"
ntapi = "0.4.1"
num-derive = "0.4.1"
num-integer = "0.1.1"
num-iter = "0.1.6"
num-rational = "0.4.1"
num-traits = "0.2.17"
num_cpus = "1.16.0"
objc = "0.2.7"
objc-foundation = "0.1.0"
objc_exception = "0.1.0"
objc_id = "0.1.1"
object = "0.32.0"
once_cell = "1.18.0"
openssl = "0.10.60"
openssl-probe = "0.1.5"
openssl-sys = "0.9.94"
ordered-float = "0.5.0"
parking = "2.0.0"
parking_lot = "0.12.1"
parking_lot_core = "0.9.9"
pathfinder_color = "0.5.0"
pathfinder_geometry = "0.5.0"
pathfinder_simd = "0.5.0"
pdqselect = "0.1.0"
peeking_take_while = "0.1.2"
percent-encoding = "2.3.0"
permissions = "0.1.0"
pest = "2.7.9"
pico-args = "0.5.0"
pin-project = "1.1.3"
pin-project-internal = "1.1.3"
pin-project-lite = "0.2.13"
pin-utils = "0.1.0"
pkg-config = "0.3.27"
png = { git = "https://github.com/image-rs/image-png.git" }
polling = "2.8.0"
ppv-lite86 = "0.2.17"
proc-macro-error = "1.0.4"
proc-macro-error-attr = "1.0.4"
proc-macro-hack = "0.5.19"
proc-macro-nested = "0.1.7"
proc-macro2 = "1.0.69"
prometheus = "0.13.3"
protobuf = "3.2.0"
quote = "1.0.33"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rand_hc = "0.3.2"
rayon = "1.8.0"
rayon-core = "1.12.0"
redox_syscall = "0.3.5"
redox_users = "0.4.0"
regex-automata = "0.4.1"
regex-syntax = "0.8.2"
remove_dir_all = { git = "https://github.com/XAMPPRocky/remove_dir_all.git" }
resvg = "0.39.0"
rgb = "0.8.36"
roxmltree = "0.18.0"
rstar = "0.11.0"
run_script = { git = "https://github.com/sagiegurari/run_script.git" }
rust-embed-impl = "8.3.0"
rust-embed-utils = "8.3.0"
rustc-demangle = "0.1.21"
rustc-hash = "1.1.0"
rustc_version = "0.4.0"
rustversion = "1.0.14"
rustybuzz = "0.10.0"
ryu = "1.0.16"
safe_arch = "0.7.0"
same-file = "1.0.6"
schannel = "0.1.20"
scoped_threadpool = "0.1.9"
scopeguard = "1.2.0"
security-framework = "2.9.0"
security-framework-sys = "2.9.0"
semver = "1.0.19"
semver-parser = "0.10.0"
sentry = "0.31.0"
sentry-backtrace = "0.31.0"
sentry-contexts = "0.31.0"
sentry-core = "0.31.0"
sentry-log = "0.31.0"
sentry-panic = "0.31.0"
sentry-types = "0.31.0"
serde_derive = "1.0.193"
serde_urlencoded = "0.7.1"
serde_with = "3.4.0"
serde_with_macros = "3.4.0"
shellexpand = "0.1.0"
shlex = "1.1.0"
signal-hook = "0.3.17"
simplecss = "0.1.0"
simplelog = "0.12.0"
siphasher = "0.3.10"
slab = "0.4.9"
smallvec = "1.11.2"
smart-default = "0.7.0"
smol = "1.3.0"
socket2 = "0.5.5"
stable_deref_trait = "1.2.0"
strsim = "0.10.0"
svgtypes = "0.13.0"
syn = "2.0.38"
synstructure = "0.12.6"
sysinfo = "0.29.11"
termcolor = "1.4.0"
textwrap = "0.16.0"
thiserror-impl = "1.0.50"
thread_local = "1.1.7"
tiff = "0.2.1"
time = "0.3.30"
tiny-skia = "0.11.0"
tinyvec = "1.1.1"
tinyvec_macros = "0.1.1"
tokio-native-tls = "0.3.1"
tokio-util = "0.7.10"
tower-service = "0.3.2"
tracing = "0.1.40"
tracing-core = "0.1.30"
tracing-futures = "0.2.5"
tree-sitter = "0.20.10"
try-lock = "0.2.4"
ttf-parser = "0.19.0"
typenum = "1.17.0"
ucd-trie = "0.1.6"
uname = "0.1.1"
unicode-bidi = "0.3.8"
unicode-bidi-mirroring = "0.1.0"
unicode-ccc = "0.1.0"
unicode-general-category = "0.5.0"
unicode-normalization = "0.1.22"
unicode-script = "0.5.0"
unicode-segmentation = "1.10.0"
unicode-vo = "0.1.0"
unicode-width = "0.1.11"
unicode_categories = "0.1.1"
unindent = "0.2.3"
unreachable = { git = "https://github.com/reem/rust-unreachable.git" }
url = "2.4.1"
urlocator = { git = "https://github.com/alacritty/urlocator.git" }
users = "0.11.0"
usvg = "0.39.0"
utf8parse = "0.2.1"
validator = "0.16.1"
vcpkg = "0.2.15"
vec1 = "1.1.0"
vec_map = "0.8.2"
version-compare = "0.1.1"
version_check = "0.9.4"
void = { git = "https://github.com/reem/rust-void.git" }
vte_generate_state_changes = "0.1.1"
wait-timeout = "0.2.0"
waker-fn = "1.1.0"
walkdir = "2.5.0"
want = "0.3.0"
wasi = "0.11.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-backend = "0.2.89"
wasm-bindgen-futures = "0.4.39"
wasm-bindgen-macro = "0.2.89"
wasm-bindgen-macro-support = "0.2.89"
wasm-bindgen-shared = "0.2.89"
web-sys = "0.3.64"
webbrowser = "0.8.11"
weezl = { git = "https://github.com/image-rs/lzw.git" }
widestring = { git = "https://github.com/starkat99/widestring-rs.git" }
winapi = "0.3.9"
winapi-build = "0.1.1"
winapi-util = "0.1.6"
wio = "0.2.2"
ws2_32-sys = "0.2.1"
xmlparser = "0.13.0"
xmlwriter = "0.1.0"

[features]
default = []
windows_deps = ["dwrote"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "d2d1", "dwrite", "dwrite_1", "dwrite_2", "dwrite_3", "winnls", "winnt", "winbase", "wingdi", "unknwnbase", "libloaderapi", "guiddef", "combaseapi"] }
wio = "0.2.2"
winreg = "0.50.0"
dwrote = { version = "0.11.0" }

[target.'cfg(macos)'.dependencies]
font-kit = {git = "https://github.com/warpdotdev/font-kit", rev = "eb8a057abe954f680a4c930a25df43fb019e1809", default-features = true}

[target.'cfg(windows)'.dependencies.font-kit]
git = "https://github.com/warpdotdev/font-kit"
rev = "eb8a057abe954f680a4c930a25df43fb019e1809"
default-features = true

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "ios"))))'.dependencies]
font-kit = {git = "https://github.com/warpdotdev/font-kit", rev = "eb8a057abe954f680a4c930a25df43fb019e1809", default-features = false, features = ["loader-freetype-default"]}
