[package]
name = "warpish_terminal"
version = "0.1.0"
edition = "2021"

# ---
# NOTE: This dependency section has been significantly cleaned up.
# The original file listed hundreds of transitive dependencies. It has been
# reduced to only the direct dependencies required by the warpish_terminal crate.
# Duplicates have been removed and versions have been consolidated.
# ---
[dependencies]
# Core Terminal & System
vte = { git = "https://github.com/warpdotdev/vte", rev = "3b3da71c34cc1256c7e20981cf03f8eb95e08ffc", features = ["ansi"] }
winit = { git = "https://github.com/warpdotdev/winit", rev = "dce1fa315d0378399bda981292f5e8d2701ffd46" }
portable-pty = "0.9"
crossterm = { version = "0.27.0", features = ["event-stream"] }
global-hotkey = "0.5"
dirs = "5.0"
ignore = "0.4"
notify = "6.0"
which = "6.0"
arboard = { git = "https://github.com/warpdotdev/arboard", rev = "c922114ac898d26dce0914176f3b8c2bf60c8137" }

# Graphics & Rendering
wgpu = "0.20"
cosmic-text = { git = "https://github.com/warpdotdev/cosmic-text", rev = "435e584ee4e2cb09315a0b2a4f4ef5e32a59e7ba" }
pollster = "0.3"
ratatui = "0.26"
resvg = "0.39.0"
image = "0.24.7"

# Async & Networking
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
futures-util = "0.3"
warp = "0.3"
async-tls = { git = "https://github.com/warpdotdev/async-tls.git", rev = "20995b78ebb9cbb63febc24c1ed9439a2841cfa6" }

# Data Handling & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
yaml-rust = "0.4"
hex = "0.4"
uuid = { version = "1.8", features = ["v4", "serde"] }

# Scripting & AI
mlua = { version = "0.9", features = ["lua54"] }
uneval = { git = "https://github.com/warpdotdev/uneval", rev = "df4d9fad372aedc447e6f93ca0f930fabaf9dd1a" }
tree-sitter = "0.20"

# Database
diesel = { version = "2.1", features = ["sqlite", "chrono"] }
rusqlite = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"

# Utilities & Tools
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
similar = { version = "2.5", features = ["serde"] }
regex = "1.10"
shellwords = "1.1"
rfd = "0.14"

# Profiling & Debugging
pprof = { version = "0.13", features = ["flamegraph"] }
addr2line = { git = "https://github.com/gimli-rs/addr2line" }

# Misc & Legacy (Review if these are all still needed)
adler = { git = "https://github.com/jonas-schievink/adler.git" } # This seems like a transitive dep, but kept for now.
adler32 = "1.2.0" # Also likely transitive.
rust-embed = { version = "8.3", features = ["debug-embed"] }

[features]
default = []
windows_deps = ["dwrote"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "d2d1", "dwrite", "dwrite_1", "dwrite_2", "dwrite_3", "winnls", "winnt", "winbase", "wingdi", "unknwnbase", "libloaderapi", "guiddef", "combaseapi"] }
wio = "0.2.2"
winreg = "0.50.0"
dwrote = { version = "0.11.0", optional = true }

[target.'cfg(macos)'.dependencies]
font-kit = {git = "https://github.com/warpdotdev/font-kit", rev = "eb8a057abe954f680a4c930a25df43fb019e1809", default-features = true}

[target.'cfg(windows)'.dependencies.font-kit]
git = "https://github.com/warpdotdev/font-kit"
rev = "eb8a057abe954f680a4c930a25df43fb019e1809"
default-features = true

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "ios"))))'.dependencies]
font-kit = {git = "https://github.com/warpdotdev/font-kit", rev = "eb8a057abe954f680a4c930a25df43fb019e1809", default-features = false, features = ["loader-freetype-default"]}